--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@ POSTGRES_USER=local_user
 POSTGRES_DB=local_db
 POSTGRES_PASSWORD=1234
 
-DATABASE_URL=postgres://local_user:1234@localhost:5432/local_db
+DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB
