--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
     "lint:prettier:check": "prettier --check .",
+    "lint:eslint:check": "eslint .",
     "lint:prettier:fix": "prettier --write .",
     "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "test:watch": "jest --watchAll --runInBand",
@@ -29,7 +30,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "concurrently": "^8.2.2",
+    "eslint": "^9.14.0",
+    "globals": "^15.11.0",
     "jest": "^29.6.2",
     "prettier": "^2.8.8"
   }
